[tool.poetry]
name = "tcd-realtime-map"
version = "0.1.0"
description = ""
authors = ["Wes Brooks <WesGBrooks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
